fix: tweaks based on Lighthouse report (#568)
* config: avoid flash of invisible text

* config: preload fonts

* config: custom Document for html lang

* chore: title on each page

* chore: add meta descriptions

* chore: accessible label for selector

* chore: accessible label for sort dropdown

--- a/components/AdvancedSearch/AdvancedSearch.module.css
+++ b/components/AdvancedSearch/AdvancedSearch.module.css
@@ -131,3 +131,9 @@
 .to {
   margin: 0 6px;
 }
+
+.select-label {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
